--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,118 @@
+*{
+  background-color: rgb(230, 244, 175);
+}
+
+
 .App {
+  
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
+  margin-top: 50px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-size: 40px;
+  font-family: 'Times New Roman', Times, serif;
+  color: rgb(100, 100, 127);
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+
+input[type="text"] {
+  padding: 12px;
+  margin-right: 10px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  width: 70%;
+  font-size: 16px;
+  transition: border-color 0.3s;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+input[type="text"]:focus {
+  outline: none;
+  border-color: #007bff;
+}
+
+button {
+  padding: 12px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  max-width: 70%;
+  width: 100%;
+}
+
+li {
+  margin-top: 15px;
+  padding: 15px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  background-color: #f9f9f9;
+  color: #333;
+  font-size: 16px;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  transition: background-color 0.3s;
 }
 
-.App-link {
-  color: #61dafb;
+li:hover {
+  background-color: #e9e9e9;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+li button {
+  background-color: #f67d89;
+  color: #fff;
+  border:  2px solid red;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s;
+}
+
+li button:hover {
+  background-color: #f93246;
+}
+
+@media screen and (max-width: 768px) {
+  input[type="text"] {
+    width: 60%;
   }
-  to {
-    transform: rotate(360deg);
+
+  button {
+    width: 30%;
+  }
+
+  ul {
+    max-width: 90%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  input[type="text"] {
+    width: 50%;
+  }
+
+  button {
+    width: 40%;
+  }
+
+  ul {
+    max-width: 100%;
   }
 }
